k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archetype-spring-cloud-stream-vertical-slice
  labels:
    k8s-app: archetype-spring-cloud-stream-vertical-slice
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: archetype-spring-cloud-stream-vertical-slice
  template:
    metadata:
      labels:
        k8s-app: archetype-spring-cloud-stream-vertical-slice
    spec:
      imagePullSecrets:
      - name: registrykey
      containers:
      - name: archetype-spring-cloud-stream-vertical-slice
        image: labcabrera/archetype-spring-cloud-stream-vertical-slice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
