k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: archetype-spring-cloud-stream-vertical-slice
  labels:
    k8s-app: archetype-spring-cloud-stream-vertical-slice
spec:
  selector:
    k8s-app: archetype-spring-cloud-stream-vertical-slice
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 8082
    protocol: TCP
