k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archetype-spring-cloud-stream-vertical-slice
  annotations:
    kubernetes.io/ingress.className: nginx-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - archetype-spring-cloud-stream-vertical-slice.local
      secretName: archetype-spring-cloud-stream-vertical-slice-tls
  rules:
    - host: archetype-spring-cloud-stream-vertical-slice.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: archetype-spring-cloud-stream-vertical-slice
                port:
                  number: 80
